--- a/main.css
+++ b/main.css
@@ -226,3 +226,26 @@ footer {
     float: left;
 }
 
+#micro {
+    position: absolute;
+    height: 25px;
+    width: 25px;
+    margin-top: -47px;
+    margin-left: 260px;
+}
+
+#voz {
+    margin-top: -5px;
+    margin-left: 535px;
+    position: absolute;
+    padding: 5px;
+    font-size: 10px;
+    color: #fff;
+    background-color: #212121;
+    width: 100px;
+    display: none;
+}
+
+.bpv:hover #voz {
+    display: block;
+}
